--- a/style/mobile.css
+++ b/style/mobile.css
@@ -300,6 +300,104 @@ header {
   height: 100%;
 }
 
+/* training section start */
+.training-section {
+  width: 90%;
+  height: auto;
+  margin: 0 auto;
+  margin-top: 82px;
+}
+
+.training__content {
+  max-width: 353px;
+  height: 162px;
+  margin-bottom: 20px;
+}
+
+.training__content-title {
+  width: 90%;
+  height: auto;
+  font-size: 2rem;
+  line-height: 120%;
+  margin-bottom: 12px;
+  margin-bottom: 11px;
+}
+
+.training__content-description {
+  max-width: 671px;
+  height: 48px;
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 0.82rem;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.3px;
+  text-align: left;
+}
+
+.training__picture {
+  display: flex;
+  flex-direction: column;
+}
+
+.training__div-1,
+.training__div-2 {
+  display: grid;
+  grid-template-columns: 0.5fr 0.5fr;
+  width: 100%;
+  position: relative;
+}
+
+.training__card-1,
+.training__card-2,
+.training__card-3,
+.training__card-4,
+.training__card-5,
+.training__card-6 {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 218px;
+}
+
+.training__card-1,
+.training__card-2,
+.training__card-4,
+.training__card-5 {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.training__card-3,
+.training__card-6 {
+  display: none;
+}
+
+.training__div-1 p,
+.training__div-2 p {
+  color: rgb(255, 255, 255);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 17px;
+  letter-spacing: 0px;
+  text-align: left;
+}
+
+.training__card-1 p,
+.training__card-2 p,
+.training__card-4 p,
+.training__card-5 p {
+  width: 144px;
+  height: 31px;
+  width: 80%;
+  height: auto;
+  position: relative;
+  top: 81%;
+  left: 6%;
+}
+
+/* training section end */
+
 /* BMI Content */
 .BMI__content {
   width: 80%;
@@ -445,7 +543,6 @@ th {
   font-size: 1.1rem;
 }
 
-
 /* team section */
 .team-section {
   width: 100%;
@@ -475,8 +572,8 @@ th {
 }
 
 .team__images {
-width: 80%;
-height: auto;
+  width: 80%;
+  height: auto;
   padding: 10px;
   margin: 0 auto;
   display: grid;
@@ -511,7 +608,6 @@ height: auto;
 .team__image__description {
   font-size: 0.8rem;
 }
-
 
 /* footer */
 .footer {
@@ -578,8 +674,8 @@ height: auto;
 }
 
 .footer__description {
-width: 80%;
-height: auto;
+  width: 80%;
+  height: auto;
   display: block;
   margin: 0 auto;
   margin-top: 36px;
