--- a/style/tab.css
+++ b/style/tab.css
@@ -2,177 +2,175 @@
 
 /* header */
 header {
-    width: 100%;
-    height: auto;
-    /* overflow: hidden; */
-  }
-  
-  /* nav */
-  .navbar {
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 30px;
-    padding: 0 20px;
-  }
-  
-  .navtitle {
-    font-size: 2.25rem;
-    line-height: 100%;
-  }
+  width: 100%;
+  height: auto;
+  /* overflow: hidden; */
+}
 
-  .nav__list {
-    gap: 17px;
-    padding: 8px 5px;
-    margin: 0px 10px;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    border-radius: 39px;
-  }
+/* nav */
+.navbar {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+  padding: 0 20px;
+}
 
-  
-  .nav__item a {
-    font-size: 1rem;
-    line-height: 100%;
-  }
-  
-  /* banner */
-  .banner {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    height: auto;
-  }
-  
-  .banner__text--container {
-    width: 100%;
-    height: auto;
-    margin-top: 65px;
-    margin-right: 0;
-    margin-left: 0px;
-    padding: 0 20px;
-  }
-  
-  .banner__text--container h1 {
-    width: 90%;
-    height: auto;
-    font-size: 4.2rem;
-    font-weight: 900;
-    line-height: 110%;
-    text-align: left;
-    margin-bottom: 30px;
-  }
-  
-  .banner__text--container p {
-    width: 90%;
-    height: auto;
-    font-size: 0.87rem;
-    font-weight: 400;
-    line-height: 22px;
-    letter-spacing: 0.3px;
-    text-align: left;
-    margin-bottom: 35px;
-  }
-  
-  .banner__btn {
-    display: flex;
-    justify-content: flex-start;
-    gap: 14px;
-  }
-  
-  .join__btn,
-  .download__btn {
-    width: 169px;
-    height: 54px;
-    padding: 0;
-    border-radius: 42px;
-    font-size: 1.1rem;
-    font-weight: 600;
-    line-height: 22px;
-  }
-  
-  .download__btn {
-    border: 1px solid rgb(255, 255, 255);
-    background-color: #111111;
-    color: rgb(255, 255, 255);
-  }
-  
-  .banner__image--container {
-    max-width: 353px;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-    margin-top: 48px;
-  }
-  
-  .banner__image {
-    width: 100%;
-    max-width: 353px;
-    height: auto;
-  }
-  
-  .banner__image img {
-    width: 100%;
-    height: 100%;
-  }
-  
-  .div350 {
-    max-width: 155.74px;
-    height: 72.58px;
-    /* display: flex;
+.navtitle {
+  font-size: 2.25rem;
+  line-height: 100%;
+}
+
+.nav__list {
+  gap: 17px;
+  padding: 8px 5px;
+  margin: 0px 10px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 39px;
+}
+
+.nav__item a {
+  font-size: 1rem;
+  line-height: 100%;
+}
+
+/* banner */
+.banner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: auto;
+}
+
+.banner__text--container {
+  width: 100%;
+  height: auto;
+  margin-top: 65px;
+  margin-right: 0;
+  margin-left: 0px;
+  padding: 0 20px;
+}
+
+.banner__text--container h1 {
+  width: 90%;
+  height: auto;
+  font-size: 4.2rem;
+  font-weight: 900;
+  line-height: 110%;
+  text-align: left;
+  margin-bottom: 30px;
+}
+
+.banner__text--container p {
+  width: 90%;
+  height: auto;
+  font-size: 0.87rem;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0.3px;
+  text-align: left;
+  margin-bottom: 35px;
+}
+
+.banner__btn {
+  display: flex;
+  justify-content: flex-start;
+  gap: 14px;
+}
+
+.join__btn,
+.download__btn {
+  width: 169px;
+  height: 54px;
+  padding: 0;
+  border-radius: 42px;
+  font-size: 1.1rem;
+  font-weight: 600;
+  line-height: 22px;
+}
+
+.download__btn {
+  border: 1px solid rgb(255, 255, 255);
+  background-color: #111111;
+  color: rgb(255, 255, 255);
+}
+
+.banner__image--container {
+  max-width: 353px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  margin-top: 48px;
+}
+
+.banner__image {
+  width: 100%;
+  max-width: 353px;
+  height: auto;
+}
+
+.banner__image img {
+  width: 100%;
+  height: 100%;
+}
+
+.div350 {
+  max-width: 155.74px;
+  height: 72.58px;
+  /* display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center; */
-    position: absolute;
-    top: 45%;
-    left: 0%;
-  }
-  
-  .div350 h4 {
-    font-size: 1.5rem;
-    font-weight: 900;
-    line-height: 20px;
-    letter-spacing: 0.3px;
-    text-align: left;
-  }
-  
-  .div350 p {
-    font-size: 0.8rem;
-    font-weight: 400;
-    line-height: 20px;
-    letter-spacing: 0.1px;
-    text-align: left;
-  }
-  
-  .div500 {
-    max-width: 145.91px;
-    height: 74.09px;
-    /* display: flex;
+  position: absolute;
+  top: 45%;
+  left: 0%;
+}
+
+.div350 h4 {
+  font-size: 1.5rem;
+  font-weight: 900;
+  line-height: 20px;
+  letter-spacing: 0.3px;
+  text-align: left;
+}
+
+.div350 p {
+  font-size: 0.8rem;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0.1px;
+  text-align: left;
+}
+
+.div500 {
+  max-width: 145.91px;
+  height: 74.09px;
+  /* display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center; */
-    position: absolute;
-    top: 10%;
-    left: 55%;
-  }
-  
-  .div500 h4 {
-    font-size: 2.2rem;
-    font-weight: 900;
-    line-height: 35px;
-  }
-  
-  .div500 p {
-    font-size: 0.7rem;
-    font-weight: 400;
-    line-height: 18px;
-  }
-  
+  position: absolute;
+  top: 10%;
+  left: 55%;
+}
 
-  /* main */
+.div500 h4 {
+  font-size: 2.2rem;
+  font-weight: 900;
+  line-height: 35px;
+}
+
+.div500 p {
+  font-size: 0.7rem;
+  font-weight: 400;
+  line-height: 18px;
+}
+
+/* main */
 
 /* change__habit--section */
 .change__habit--section {
@@ -249,7 +247,6 @@ header {
   justify-content: center;
   align-items: center;
   gap: 10px;
-
 }
 
 .extra__mile--contents {
@@ -301,6 +298,105 @@ header {
   border-radius: 18px;
 }
 
+/* training section start */
+.training-section {
+  width: 90%;
+  height: auto;
+  margin: 0 auto;
+  margin-top: 82px;
+}
+
+.training__content {
+  max-width: 353px;
+  height: 162px;
+  margin-bottom: 20px;
+}
+
+.training__content-title {
+  width: 90%;
+  height: auto;
+  font-size: 2rem;
+  line-height: 120%;
+  margin-bottom: 12px;
+  margin-bottom: 11px;
+}
+
+.training__content-description {
+  max-width: 671px;
+  height: 48px;
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 0.82rem;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.3px;
+  text-align: left;
+}
+
+.training__picture {
+  display: flex;
+  flex-direction: column;
+}
+
+.training__div-1 {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 0.3fr 0.4fr 0.3fr;
+  position: relative;
+}
+
+.training__div-2 {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 0.3fr 0.4fr 0.3fr;
+  position: relative;
+}
+
+.training__card-1,
+.training__card-2,
+.training__card-3,
+.training__card-4,
+.training__card-5,
+.training__card-6 {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 218px;
+}
+
+.training__card-1,
+.training__card-2,
+.training__card-4,
+.training__card-5 {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.training__div-1 p,
+.training__div-2 p {
+  color: rgb(255, 255, 255);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 17px;
+  letter-spacing: 0px;
+  text-align: left;
+}
+
+.training__card-1 p,
+.training__card-2 p,
+.training__card-4 p,
+.training__card-5 p,
+.training__card-6 p {
+  width: 144px;
+  height: 31px;
+  width: 80%;
+  height: auto;
+  position: relative;
+  top: 81%;
+  left: 6%;
+}
+
+/* training section end */
 
 /* BMI Content */
 .BMI__content {
@@ -476,8 +572,8 @@ th {
 }
 
 .team__images {
-width: 80%;
-height: auto;
+  width: 80%;
+  height: auto;
   padding: 10px;
   margin: 0 auto;
   display: grid;
@@ -512,7 +608,6 @@ height: auto;
 .team__image__description {
   font-size: 0.8rem;
 }
-
 
 /* footer */
 .footer {
@@ -578,8 +673,8 @@ height: auto;
 }
 
 .footer__description {
-width: 80%;
-height: auto;
+  width: 80%;
+  height: auto;
   display: block;
   margin: 0 auto;
   margin-top: 36px;
